--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
 
     ext {
-        version_name = '3.0.3'
-        kotlin_version = '1.3.50'
-        compile_sdk_version = 28
-        target_sdk_version = 28
+        version_name = '3.0.5'
+        kotlin_version = '1.4.10'
+        compile_sdk_version = 30
+        target_sdk_version = 30
         min_sdk_version = 15
-        version_code = 15
+        version_code = 16
     }
 
     repositories {
@@ -15,7 +15,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:4.2.0-alpha10'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -31,4 +31,3 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
-
