--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,32 @@
 buildscript {
     ext {
+        minSdk = 15
+        targetSdk = 30
+        compileSdk = 30
+        buildTools = '30.0.3'
+
+        kotlin_version = '1.5.10'
+        coreDesugaring = '1.1.5'
+
         version_name = '3.0.5'
-        kotlin_version = '1.4.10'
-        compile_sdk_version = 30
-        target_sdk_version = 30
-        min_sdk_version = 15
         version_code = 16
+
+        androidx = [
+                "core"      : '1.6.0',
+                "activity"  : '1.3.0-beta02',
+                "fragment"  : '1.3.5',
+                "appcompat" : '1.3.0',
+                "constraint": '2.1.0-beta02'
+        ]
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.2.0-alpha10'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -22,7 +34,6 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
         mavenCentral()
         maven { url "https://jitpack.io" }
     }
