--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,13 +1,16 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
+plugins {
+    id 'com.android.application'
+    id 'kotlin-android'
+}
 
 android {
-    compileSdkVersion compile_sdk_version
+    compileSdkVersion project.compileSdk
+    buildToolsVersion project.buildTools
 
     defaultConfig {
         applicationId "pl.aprilapps.easyphotopicker.sample"
-        minSdkVersion min_sdk_version
-        targetSdkVersion target_sdk_version
+        minSdkVersion project.minSdk
+        targetSdkVersion project.targetSdk
         versionCode version_code
         versionName version_name
     }
@@ -30,10 +33,9 @@ android {
 dependencies {
     implementation(project(':library'))
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.5.0-alpha02'
-    implementation 'androidx.activity:activity-ktx:1.2.0-alpha08'
-    implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation "androidx.core:core-ktx:${androidx.core}"
+    implementation "androidx.activity:activity-ktx:${androidx.activity}"
+    implementation "androidx.appcompat:appcompat:${androidx.appcompat}"
+    implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
 }
